2005-09-30 Mikhail Khodjaiants
	Bug 110392: Internal error while launching gdb debugger.
	* CMainAttachTab.java

2005-09-08 Mikhail Khodjaiants
	Bug 109106: The "Debugger" tab of the launch configuration dialog is too wide.
	* CDebuggerTab.java
	
2005-08-31 Alain Magloire
	Fix Pr 107571: Part of this fix is to add the
	inferior process in the session
	* src/org/eclipse/cdt/launch/internal/LocalAttachLaunchDelegate.java

2005-07-18 Alain Magloire
	New combo to choose the MIVersion.
	* src/org/eclipse/cdt/launch/ui/CDEbuggerTab.java

2005-07-14 Mikhail Khodjaiants
	Fix PR 103207: New Icon for the TwoPaneElement in the binary search
	* src/org/eclipse/cdt/launch/ui/CMainTab.java

2005-07-12 Mikhail Khodjaiants
	Bug 103522: Launcher: Stop at main checkbox is covered with default launch dialog size.
	Moved the "Stop in main" and "Advanced" buttons on the line below.
	* CDebuggerTab.java

2005-06-28 Mikhail Khodjaiants
	Bug 89276: Typo in org.eclipse.cdt.launch/plugin.xml.
	* plugin.xml

2005-05-21 Mikhail Khodjaiants
	Bug 91374: CDT launch should set ATTR_PROCESS_TYPE.
	* AbstractCLaunchDelegate.java
	* CoreFileLaunchDelegate.java
	* LocalRunLaunchDelegate.java

2005-05-15 Mikhail Khodjaiants
	Bug 87556: Post-mortem debug fails silently if core file is inaccessible.
	Applied patch from Joanne Woo (Monta Vista).
	* CoreFilePrompter.java
	* CoreFileLaunchDelegate.java
	* LaunchMessages.properties

2005-05-18 David Inglis
	Fixed bug 39581 & part of 46746
	
	* AbstractCLaunchDelegate.java
	* LocalAttachLauchDelegate.java
	* LocalRunLaunchDelegate.java
	* LocalAttachLaunchDelegate.java
	* LocalAttachLaunchConfigurationTabGroup.java
	* LocalRunLaunchConfigurationTabGroup.java
	+ CMainAttachTab.java
	* CMainTab.java
	
	
2005-05-09 Mikhail Khodjaiants
	Bug 80175: Replace the CDT source lookup by the source lookup provided by Eclipse platform.
	Removed the old source lookup related classes and interfaces.
	* CoreFileLaunchConfigurationTabGroup.java
	* LaunchMessages.properties