@@ -99,6 +99,7 @@ CDebuggerTab.Automatically_track_values_of=Automatically track the values of
 CDebuggerTab.Debugger_Options=Debugger Options
 CDebuggerTab.Mode_not_supported=Mode ''{0}'' is not supported by selected debugger
 CDebuggerTab.Advanced=Advanced...
+CDebuggerTab.Protocol=Protocol
 CDebuggerTab.Variables=Variables
 CDebuggerTab.Registers=Registers
 CDebuggerTab.No_debugger_available=No debugger available
